--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>BoilPro</title>
 </head>
 <body>
+    <div>
+
+    </div>
     
 </body>
+<script src="./JS/timer.js"></script>
 </html>
