Created html for options page

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-    <div id="try">
+    <div>
 
     </div>
-    
+
+    <script src="./JS/index.js"></script>
 </body>
-<script src="./JS/timer.js"></script>
+<!--<script src="./JS/timer.js"></script>-->
+
 </html>
