tried some timer stuff

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <div id="try">
-
-    </div>
+    <div id="circleContainer">
+       
+    </div> 
     
 </body>
 <script src="./JS/timer.js"></script>
