Some CSS changes

--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
 </head>
 
 <body>
-    <div id="circleContainer">
-       
-    </div> 
+    <!-- <div id="circleContainer"></div> -->
     
-    <div>
-
-    </div>
-
     <script src="./JS/index.js"></script>
 </body>
 
