added some animations

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <title>BoilPro</title>
 </head>
 
-<body>
-    <!-- <div id="circleContainer"></div> -->
-    
+<body>    
     <script src="./JS/index.js"></script>
+    <script src="./JS/timer.js"></script>
 </body>
 
 
